@@ -1,3 +1,10 @@
+2007-06-07  Bastien Nocera  <hadess@hadess.net>
+
+	* gedit/gedit-metadata-manager.c:
+	(gedit_metadata_manager_arm_timeout),
+	(gedit_metadata_manager_save):
+	Remove bits of evince left-overs, should fix #444921
+
 2007-06-05  Bastien Nocera  <hadess@hadess.net>
 
 	* gedit/gedit-metadata-manager.c:
